[gd_scene load_steps=50 format=2]

[ext_resource path="res://Scenes/Menus/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Textures/UI/Button/start-btn-p2-pressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/Textures/UI/Button/start-btn-p2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/title.png" type="Texture" id=4]
[ext_resource path="res://logo CELL.png" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/soire.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/logo_white.png" type="Texture" id=7]
[ext_resource path="res://Assets/Textures/UI/Button/start-btn-p1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Textures/UI/Button/start-btn-p1-pressed.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 275, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 550, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 825, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 1100, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 1375, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 1650, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 1925, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 2200, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 2475, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 2750, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 3025, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 3300, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 3575, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 3850, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 4125, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 4400, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 4675, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 4950, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 5225, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 5500, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 5775, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 6050, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 6325, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 6600, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 6875, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 7150, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 7425, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 7700, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 4 )
region = Rect2( 7975, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 8250, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 8525, 0, 275, 211 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 8800, 0, 275, 211 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 139, 84 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 139, 0, 139, 84 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 139, 84 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 139, 0, 139, 84 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
selectionTimeout = 5.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ControlIcons" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -1.0
margin_right = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoCELL" type="Sprite" parent="CanvasLayer/ControlIcons"]
position = Vector2( -300, 0 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 5 )

[node name="LogoSoire" type="Sprite" parent="CanvasLayer/ControlIcons"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="LogoMinTech" type="Sprite" parent="CanvasLayer/ControlIcons"]
position = Vector2( 300, 0 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 7 )

[node name="ControlTitle" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleSprite" type="AnimatedSprite" parent="CanvasLayer/ControlTitle"]
frames = SubResource( 36 )
frame = 21
speed_scale = 3.0
playing = true

[node name="ControlP1" type="Control" parent="CanvasLayer"]
anchor_left = 0.3
anchor_top = 0.85
anchor_right = 0.3
anchor_bottom = 0.85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="AnimatedSprite" parent="CanvasLayer/ControlP1"]
frames = SubResource( 39 )
speed_scale = 5.0
playing = true

[node name="Unselected" type="Sprite" parent="CanvasLayer/ControlP1"]
texture = ExtResource( 8 )

[node name="ControlP2" type="Control" parent="CanvasLayer"]
anchor_left = 0.7
anchor_top = 0.85
anchor_right = 0.7
anchor_bottom = 0.85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selected" type="AnimatedSprite" parent="CanvasLayer/ControlP2"]
frames = SubResource( 42 )
speed_scale = 5.0
playing = true

[node name="Unselected" type="Sprite" parent="CanvasLayer/ControlP2"]
texture = ExtResource( 3 )

[node name="P1Timer" type="Timer" parent="."]
one_shot = true

[node name="P2Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="P1Timer" to="." method="_on_P1Timer_timeout"]
[connection signal="timeout" from="P2Timer" to="." method="_on_P2Timer_timeout"]
